<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:orientation="vertical">

    <com.base.presentation.ui.view.LayoutAppHeader
        android:id="@+id/appHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/setting" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_10sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_group_setting"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TitleGroupSettingStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/general" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textChangePattern"
                    style="@style/TitleItemSettingStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/round_keyboard_arrow_right_24"
                    android:drawableTint="@color/black"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/change_pattern" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TitleItemSettingStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hide_pattern" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.suke.widget.SwitchButton
                        android:id="@+id/switchHidePattern"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:sb_checked_color="#6750A3" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textFingerprintRegisterTitle"
                            style="@style/TitleItemSettingStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/setting_fingerprint_not_registered_title" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textFingerprintRegisterDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/setting_fingerprint_not_registered_description"
                            android:textColor="@color/md_black_1"
                            android:textSize="@dimen/_12ssp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.suke.widget.SwitchButton
                        android:id="@+id/switchFingerPrint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:sb_checked_color="#6750A3" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLanguage"
                    style="@style/TitleItemSettingStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/round_keyboard_arrow_right_24"
                    android:drawableTint="@color/black"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/language" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TitleItemSettingStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/round_keyboard_arrow_right_24"
                    android:drawableTint="@color/black"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/rating" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TitleItemSettingStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/round_keyboard_arrow_right_24"
                    android:drawableTint="@color/black"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/policy" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/background_group_setting"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TitleGroupSettingStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_card_intruders_title" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TitleItemSettingStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_enable_intruders_title" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_enable_intruders_description"
                            android:textColor="@color/md_black_1"
                            android:textSize="@dimen/_12ssp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.suke.widget.SwitchButton
                        android:id="@+id/switchEnableIntrudersCatcher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:sb_checked_color="#6750A3" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layoutIntrudersFolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TitleItemSettingStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_intruders_folder_title" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_intruders_folder_description"
                        android:textColor="@color/md_black_1"
                        android:textSize="@dimen/_12ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/background_group_setting"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TitleGroupSettingStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced_settings" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TitleItemSettingStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sound_alarm" />

                    <com.suke.widget.SwitchButton
                        android:id="@+id/switchSoundAlarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:sb_checked_color="#6750A3" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llNumAllows"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/_8sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TitleItemSettingStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/number_of_times_allowed" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textNumOfTimes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/averta_bold"
                        android:text="@string/num_of_times"
                        android:textColor="@color/md_black_1"
                        android:textSize="@dimen/_13ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llPreventUninstall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TitleItemSettingStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/prevent_uninstall" />

                    <com.suke.widget.SwitchButton
                        android:id="@+id/switchPreventUninstall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:sb_checked_color="#6750A3" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llCamouflageIcon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TitleItemSettingStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_use_camouflage_icon" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/desc_use_camouflage_icon"
                            android:textColor="@color/md_black_1"
                            android:textSize="@dimen/_12ssp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imgCamouflageIcon"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@drawable/bg_setting_button"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        app:shapeAppearanceOverlay="@style/RoundedImageView"
                        app:srcCompat="@drawable/ic_hidden_folder" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>