<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|bottom"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageIcon"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_fileName="animation_folder.json"
        app:lottie_loop="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        android:text="@string/permissions_needed"
        android:textColor="#111A56"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/sub_title_permission_step"
        android:textColor="#111A56"
        android:textSize="@dimen/_12sdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAllow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_60sdp"
        android:background="@drawable/ripple_item_setting"
        android:text="@string/allow_access"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDonAccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/don_access"
        android:textAllCaps="false"
        android:textColor="#111A56"
        android:textSize="@dimen/_12sdp" />

</androidx.appcompat.widget.LinearLayoutCompat>