<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_toolbar_hide_file"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:src="@drawable/ic_keyboard_backspace_24" />

        <TextView
            android:id="@+id/file_hide_txt_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/btn_back"
            android:layout_marginStart="72dp"
            android:gravity="center_vertical"
            android:text="@string/title_intruders_photos"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewIntrudersPhotosList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3" />

        <LinearLayout
            android:id="@+id/llEmptyPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_icon_empty_page_intruders" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/empty_page_intruders_title"
                android:textColor="@color/md_black_1"
                android:textSize="@dimen/_12ssp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_64sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_64sdp"
                android:gravity="center"
                android:text="@string/empty_page_intruders_description"
                android:textColor="@color/md_black_1"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>